Downgrade from JDK 25 to JDK 21 LTS for production stability
- Removed Lombok edge-SNAPSHOT and projectlombok.org edge-releases repository
- Removed ByteBuddy agent dependency
- Simplified Maven compiler and Surefire plugin configurations
- Removed JDK 25 test resource files (MockMaker, ByteBuddy properties)
- Using OpenJDK 21.0.8 LTS
- All 59 tests passing